	- Rename MSTrace[ID,Seg,List] to MS3Trace[ID,Seg,List] and restructure for
	miniSEED 3.
	- Rename Selections and SelectTime to MS3Selections and MS3SelectTime.
	- Remove MSTrace_s and MSTraceGroup, use MS3Trace[ID,Seg,List] instead.
	- Change HPTMODULUS to 1000000000 to represent nanoseconds, update 
	HPTERROR value to nanoseconds similarly.
	- Rename macros and functions specific to miniSEED 2.x by adding "2".
	- Remove packheaderbyteorder and packdatabyteorder handling.
	- Rename unpackheaderbyteorder => ms2_unpackheaderbyteorder and
	unpackdatabyteorder => ms2_unpackdatabyteorder, only for miniSEED 2.x.	
	- Decrease MINRECLEN from 256 to 36, increase MAXRECLEN from 1MB to 16MB.
	- Remove needless typedef and usage of flag as int8_t.
	- Increase 'recbuflen' to msr3_parse[_selection]() to uint64_t.
	- Remove record length specifier from many parsing routines, always autodetermined.
	- Remove capability to read the deprecated "pack" file format used at IRIS DMC.
	- Remove MS_ISVALIDBLANK macro, was only used for notification of archaic structure.
	- Add JSON handling for extra headers.
	- Add crc32c.c for CRC-32C calculation, new ms_crc32c().
	- Set msr->swapflag bit flags to indicate if header and payload need swapping.
	- Added mstl3_readbuffer()

2017.283: 2.19.5
	- msr_endtime(): calculate correct end time during a leap second.
	- Fixed signedness comparison warning.

2017.125:
	- Export LM_SIZEOF_OFF_T on Windows via libmseed.def.

2017.118: 2.19.4
	- Add global LM_SIZEOF_OFF_T variable that is set to the size of
	the off_t data type as determined at compile time.

2017.075: 2.19.3
	- Add missing public, global symbols to libmseed.map, thanks
	to Elliott Sales de Andrade.

2017.061: 2.19.2
	- Provide install target in Makefile thanks to by Pierre Duperray.
	- Deprecate dynamic build target, the shared target will now build
	shared or dynamic (Darwin) libraries depending on the system.
	- Limit symbols exported in shared libraries to public interfaces