@@ -42,8 +42,6 @@ acknowledgement is included in the code whenever possible.
 
 @subsection main-license License
 
-Copyright (C) 2018 Chad Trabant, IRIS Data Management Center
-
 This library is free software; you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as
 published by the Free Software Foundation; either version 3 of the
@@ -57,5 +55,7 @@ Lesser General Public License (GNU-LGPL) for more details.
 You should have received a copy of the GNU Lesser General Public
 License along with this software.
 If not, see https://www.gnu.org/licenses/.
+
+Copyright (C) 2019 Chad Trabant, IRIS Data Management Center
 
 */
